--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						<button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
 						<ul class="menu">
 							<li class="menu-item current-menu-item"><a href="index.html">Homepage</br>الرئيسية</a></li>
+							<li class="menu-item"><a href="#">I'm New</br>انا جديد</a></li>
 							<li class="menu-item"><a href="#">About</br>من نحن</a></li>
 							<li class="menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
 							<li class="menu-item"><a href="events.html">Events</br>أحداث</a></li>
