--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 		<!-- Loading main css file -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="assets/css/main.css">
 		
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
 		<script src="js/ie-support/respond.js"></script>
 		<![endif]-->
-
 	</head>
 
 
-	<body>
+	<body style="padding:0px; margin:0px; background-color:#fff;font-family:'Open Sans',sans-serif,arial,helvetica,verdana">
+
 		<div class="site-content">
 			<header class="site-header">
 				<div class="container">
@@ -48,35 +48,141 @@
 				</div>
 			</header> <!-- .site-header -->
 
-			<div class="hero">
-				<div class="slides">
-					<li data-bg-image="images/slide-1.jpg">
-						<div class="container">
-							<div class="slide-content">
-								<small class="slide-subtitle">Fellowship Bible Church</small>
-								<h2 class="slide-title">Place with a real love</h2>
 
-								<a href="#" class="button">See our families</a>
-							</div>
-						</div>
-					</li>
+    <!-- #region Jssor Slider Begin -->
+    <script src="js/jssor.slider-25.0.6.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        jssor_1_slider_init = function() {
 
-					<li data-bg-image="images/slide-1.jpg">
-						<div class="container">
-							<div class="slide-content">
-								<small class="slide-subtitle">Fellowship Bible Church</small>
-								<h2 class="slide-title">Place with a real love</h2>
+            var jssor_1_SlideshowTransitions = [
+              {$Duration:1200,$Opacity:2}
+            ];
 
-								<a href="#" class="button">See our families</a>
-							</div>
-						</div>
-					</li>
-				</div>
-			</div>
+            var jssor_1_options = {
+              $AutoPlay: 1,
+              $SlideshowOptions: {
+                $Class: $JssorSlideshowRunner$,
+                $Transitions: jssor_1_SlideshowTransitions,
+                $TransitionsOrder: 1
+              },
+              $ArrowNavigatorOptions: {
+                $Class: $JssorArrowNavigator$
+              },
+              $BulletNavigatorOptions: {
+                $Class: $JssorBulletNavigator$
+              }
+            };
+
+            var jssor_1_slider = new $JssorSlider$("jssor_1", jssor_1_options);
+
+            /*responsive code begin*/
+            /*remove responsive code if you don't want the slider scales while window resizing*/
+            function ScaleSlider() {
+                var refSize = jssor_1_slider.$Elmt.parentNode.clientWidth;
+                if (refSize) {
+                    refSize = Math.min(refSize, 980);
+                    jssor_1_slider.$ScaleWidth(refSize);
+                }
+                else {
+                    window.setTimeout(ScaleSlider, 30);
+                }
+            }
+            ScaleSlider();
+            $Jssor$.$AddEvent(window, "load", ScaleSlider);
+            $Jssor$.$AddEvent(window, "resize", ScaleSlider);
+            $Jssor$.$AddEvent(window, "orientationchange", ScaleSlider);
+            /*responsive code end*/
+        };
+    </script>
+    <style>
+        /* jssor slider loading skin double-tail-spin css */
+
+        .jssorl-004-double-tail-spin img {
+            animation-name: jssorl-004-double-tail-spin;
+            animation-duration: 1.2s;
+            animation-iteration-count: infinite;
+            animation-timing-function: linear;
+        }
+
+        @keyframes jssorl-004-double-tail-spin {
+            from {
+                transform: rotate(0deg);
+            }
+
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+
+        .jssorb051 .i {position:absolute;cursor:pointer;}
+        .jssorb051 .i .b {fill:#fff;fill-opacity:0.5;stroke:#000;stroke-width:400;stroke-miterlimit:10;stroke-opacity:0.5;}
+        .jssorb051 .i:hover .b {fill-opacity:.7;}
+        .jssorb051 .iav .b {fill-opacity: 1;}
+        .jssorb051 .i.idn {opacity:.3;}
+
+        .jssora051 {display:block;position:absolute;cursor:pointer;}
+        .jssora051 .a {fill:none;stroke:#fff;stroke-width:360;stroke-miterlimit:10;}
+        .jssora051:hover {opacity:.8;}
+        .jssora051.jssora051dn {opacity:.5;}
+        .jssora051.jssora051ds {opacity:.3;pointer-events:none;}
+    </style>
+    <div id="jssor_1" style="position:relative;margin:0 auto;top:0px;left:0px;width:980px;height:380px;overflow:hidden;visibility:hidden;">
+        <!-- Loading Screen -->
+        <div data-u="loading" class="jssorl-004-double-tail-spin" style="position:absolute;top:0px;left:0px;text-align:center;background-color:rgba(0,0,0,0.7);">
+            <img style="margin-top:-19px;position:relative;top:50%;width:38px;height:38px;" src="img/double-tail-spin.svg" />
+        </div>
+        <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+            <div>
+            <a href="http://www.urbanschool.in" target="_blank">
+                <img data-u="image" src="img/001.jpg" />
+            </div>
+            </a>
+            <div>
+                <img data-u="image" src="img/002.jpg" />
+            </div>
+            <div>
+                <img data-u="image" src="img/003.jpg" />
+            </div>
+
+
+            <a data-u="any" href="https://www.jssor.com" style="display:none">js slider</a>
+        </div>
+        <!-- Bullet Navigator -->
+        <div data-u="navigator" class="jssorb051" style="position:absolute;bottom:12px;right:12px;" data-autocenter="1" data-scale="0.5" data-scale-bottom="0.75">
+            <div data-u="prototype" class="i" style="width:16px;height:16px;">
+                <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                    <circle class="b" cx="8000" cy="8000" r="5800"></circle>
+                </svg>
+            </div>
+        </div>
+        <!-- Arrow Navigator -->
+        <div data-u="arrowleft" class="jssora051" style="width:55px;height:55px;top:0px;left:25px;" data-autocenter="2" data-scale="0.75" data-scale-left="0.75">
+            <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                <polyline class="a" points="11040,1920 4960,8000 11040,14080 "></polyline>
+            </svg>
+        </div>
+        <div data-u="arrowright" class="jssora051" style="width:55px;height:55px;top:0px;right:25px;" data-autocenter="2" data-scale="0.75" data-scale-right="0.75">
+            <svg viewbox="0 0 16000 16000" style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                <polyline class="a" points="4960,1920 11040,8000 4960,14080 "></polyline>
+            </svg>
+        </div>
+    </div>
+    <script type="text/javascript">jssor_1_slider_init();</script>
+    <!-- #endregion Jssor Slider End -->
+
+
+    <div class="div2">
+       
+    </div>
 
 			<main class="main-content">
 				<div class="fullwidth-block">
 					<div class="container">
+					<center><h2 class="section-title">نرحب بكم إلى كنيسة التعاون المعمدانية</br></br>
+					We welcome you to the Fellowship Bible Church</h2></center>
+					<hr>
+					</br>
 						<h2 class="section-title">Recent news</h2>
 
 						<div class="row">
@@ -231,7 +337,7 @@
 						<div class="col-md-4">
 							<div class="widget">
 								<h3 class="widget-title">Our address</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi perspiciatis magnam, ab ipsa laboriosam tempore tenetur, aliquid repellat, ex cum dicta reiciendis accusamus. Omnis repudiandae quasi mollitia, iusto odio dignissimos.</p>
+								<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut.</br>Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع </p>
 								<ul class="address">
 									<li><i class="fa fa-map-marker"></i> 329 Church St, Garland, TX 75042</li>
 									<li><i class="fa fa-phone"></i> (425) 853 442 552</li>
@@ -241,14 +347,12 @@
 						</div>
 						<div class="col-md-4">
 							<div class="widget">
-								<h3 class="widget-title">Topics from last meeting</h3>
+								<h3 class="widget-title">Services & Ministries</h3>
+								<p>The FBC operates a series of scheduled meetings during the week, including a Sunday school. </br></br>The timetable for gatherings and worship is according to the following chart (Beirut Local Time):</p>
 								<ul class="bullet">
-									<li><a href="#">Lorem ipsum dolor sit amet</a></li>
-									<li><a href="#">Consectetur adipisicing elit quis nostrud</a></li>
-									<li><a href="#">Eiusmod tempor incididunt ut labore et dolore magna</a></li> 
-									<li><a href="#">Ut enim ad minim veniam cillum</a></li>
-									<li><a href="#">Exercitation ullamco laboris nisi ut aliquip</a></li> 
-									<li><a href="#">Duis aute irure dolor in reprehenderit in voluptate</a></li>
+									<li><a href="#">Worship Service: Sundays at 10:30 AM</a></li>
+									<li><a href="#">Bible Study & Prayer: Thursdays at 6:30 PM</a></li>
+									<li><a href="#">Sunday School: For all ages at 9:30 AM</a></li> 
 								</ul>
 							</div>
 						</div>
