--- a/sermons/sermons.html
+++ b/sermons/sermons.html
@@ -3,13 +3,12 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Online Sermons</title>
-<script language="JavaScript" src="audio-player.js"></script>
-<link rel='stylesheet' id='risen-base-style-css'  href='style.css' type='text/css' media='all' />
+<script language="JavaScript" src="https://peterhaddad98.github.io/fbc/sermons/audio-player.js"></script>
+<link rel='stylesheet' id='risen-base-style-css'  href='https://peterhaddad98.github.io/fbc/sermons/style.css' type='text/css' media='all' />
 <link rel='stylesheet' id='google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Shadows+Into+Light+Two' type='text/css' media='all' />
 
 
 </head>
-<!-- <body background="images\main-center.jpg"> -->
 <body>
 <table border="0" cellspacing="0" cellpadding="0" width="790" height="100%" >
 	<tr>
