--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 			<div class="hero">
 				<div class="slides">
-					<li data-bg-image="images/slide-1.jpg">
+					<li data-bg-image="images/slide-1.JPG">
 						<div class="container">
 							<div class="slide-content">
 
