--- a/index.html
+++ b/index.html
@@ -48,18 +48,13 @@
 				</div>
 			</header> <!-- .site-header -->
 
-			<div class="hero">
-				<div class="slides">
-					<li data-bg-image="images/slide-1.JPG">
-						<div class="container">
-							<div class="slide-content">
 
-							</div>
-						</div>
-					</li>
-
-				</div>
-			</div>
+			<section id="cta">
+				</br></br></br></br>
+				</br></br></br></br>
+				</br></br></br></br>
+				</br></br></br></br>
+			</section>
 
 
     <div class="div2">
