--- a/media/media.html
+++ b/media/media.html
@@ -15,7 +15,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL04"><img src="album_cover/FC_NL04.png" align="middle" width="100">Naguib Labib CD #04</a>
+<a><img src="album_cover/FC_NL04.png" align="middle" width="100">Naguib Labib CD #04</a>
 </td>
 <td align="center">
 <a href="zip/NL04.zip"><img src="../images/download.jpg"></a>
@@ -23,7 +23,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL05"><img src="album_cover/FC_NL05.png" align="middle" width="100">Naguib Labib CD #05</a>
+<a><img src="album_cover/FC_NL05.png" align="middle" width="100">Naguib Labib CD #05</a>
 </td>
 <td align="center">
 <a href="zip/NL05.zip"><img src="../images/download.jpg"></a>
@@ -31,7 +31,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL07"><img src="album_cover/FC_NL07.png" align="middle" width="100">Naguib Labib CD #07</a>
+<a><img src="album_cover/FC_NL07.png" align="middle" width="100">Naguib Labib CD #07</a>
 </td>
 <td align="center">
 <a href="zip/NL07.zip"><img src="../images/download.jpg"></a>
@@ -39,7 +39,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL09"><img src="album_cover/FC_NL09.png" align="middle" width="100">Naguib Labib CD #09</a>
+<a><img src="album_cover/FC_NL09.png" align="middle" width="100">Naguib Labib CD #09</a>
 </td>
 <td align="center">
 <a href="zip/NL09.zip"><img src="../images/download.jpg"></a>
@@ -47,7 +47,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL10"><img src="album_cover/FC_NL10.png" align="middle" width="100">Naguib Labib CD #10</a>
+<a><img src="album_cover/FC_NL10.png" align="middle" width="100">Naguib Labib CD #10</a>
 </td>
 <td align="center">
 <a href="zip/NL10.zip"><img src="../images/download.jpg"></a>
@@ -55,7 +55,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL12"><img src="album_cover/FC_NL12.png" align="middle" width="100">Naguib Labib CD #12</a>
+<a><img src="album_cover/FC_NL12.png" align="middle" width="100">Naguib Labib CD #12</a>
 </td>
 <td align="center">
 <a href="zip/NL12.zip"><img src="../images/download.jpg"></a>
@@ -63,7 +63,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL15"><img src="album_cover/FC_NL15.png" align="middle" width="100">Naguib Labib CD #15</a>
+<a><img src="album_cover/FC_NL15.png" align="middle" width="100">Naguib Labib CD #15</a>
 </td>
 <td align="center">
 <a href="zip/NL15.zip"><img src="../images/download.jpg"></a>
@@ -71,7 +71,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL16"><img src="album_cover/FC_NL16.png" align="middle" width="100">Naguib Labib CD #16</a>
+<a><img src="album_cover/FC_NL16.png" align="middle" width="100">Naguib Labib CD #16</a>
 </td>
 <td align="center">
 <a href="zip/NL16.zip"><img src="../images/download.jpg"></a>
@@ -79,7 +79,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL17"><img src="album_cover/FC_NL17.png" align="middle" width="100">Naguib Labib CD #17</a>
+<a><img src="album_cover/FC_NL17.png" align="middle" width="100">Naguib Labib CD #17</a>
 </td>
 <td align="center">
 <a href="zip/NL17.zip"><img src="../images/download.jpg"></a>
@@ -87,7 +87,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL24"><img src="album_cover/FC_NL24.png" align="middle" width="100">Naguib Labib CD #24</a>
+<a><img src="album_cover/FC_NL24.png" align="middle" width="100">Naguib Labib CD #24</a>
 </td>
 <td align="center">
 <a href="zip/NL24.zip"><img src="../images/download.jpg"></a>
@@ -95,7 +95,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL25"><img src="album_cover/FC_NL25.png" align="middle" width="100">Naguib Labib CD #25</a>
+<a><img src="album_cover/FC_NL25.png" align="middle" width="100">Naguib Labib CD #25</a>
 </td>
 <td align="center">
 <a href="zip/NL25.zip"><img src="../images/download.jpg"></a>
@@ -103,7 +103,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL26"><img src="album_cover/FC_NL26.png" align="middle" width="100">Naguib Labib CD #26</a>
+<a><img src="album_cover/FC_NL26.png" align="middle" width="100">Naguib Labib CD #26</a>
 </td>
 <td align="center">
 <a href="zip/NL26.zip"><img src="../images/download.jpg"></a>
@@ -111,7 +111,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL27"><img src="album_cover/FC_NL27.png" align="middle" width="100">Naguib Labib CD #27</a>
+<a><img src="album_cover/FC_NL27.png" align="middle" width="100">Naguib Labib CD #27</a>
 </td>
 <td align="center">
 <a href="zip/NL27.zip"><img src="../images/download.jpg"></a>
@@ -119,7 +119,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL29"><img src="album_cover/FC_NL29.png" align="middle" width="100">Naguib Labib CD #29</a>
+<a><img src="album_cover/FC_NL29.png" align="middle" width="100">Naguib Labib CD #29</a>
 </td>
 <td align="center">
 <a href="zip/NL29.zip"><img src="../images/download.jpg"></a>
@@ -127,7 +127,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL30"><img src="album_cover/FC_NL30.png" align="middle" width="100">Naguib Labib CD #30</a>
+<a><img src="album_cover/FC_NL30.png" align="middle" width="100">Naguib Labib CD #30</a>
 </td>
 <td align="center">
 <a href="zip/NL30.zip"><img src="../images/download.jpg"></a>
@@ -135,7 +135,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL31"><img src="album_cover/FC_NL31.png" align="middle" width="100">Naguib Labib CD #31</a>
+<a><img src="album_cover/FC_NL31.png" align="middle" width="100">Naguib Labib CD #31</a>
 </td>
 <td align="center">
 <a href="zip/NL31.zip"><img src="../images/download.jpg"></a>
@@ -143,7 +143,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL32"><img src="album_cover/FC_NL32.png" align="middle" width="100">Naguib Labib CD #32</a>
+<a><img src="album_cover/FC_NL32.png" align="middle" width="100">Naguib Labib CD #32</a>
 </td>
 <td align="center">
 <a href="zip/NL32.zip"><img src="../images/download.jpg"></a>
@@ -151,7 +151,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL33"><img src="album_cover/FC_NL33.png" align="middle" width="100">Naguib Labib CD #33</a>
+<a><img src="album_cover/FC_NL33.png" align="middle" width="100">Naguib Labib CD #33</a>
 </td>
 <td align="center">
 <a href="zip/NL33.zip"><img src="../images/download.jpg"></a>
@@ -159,7 +159,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL34"><img src="album_cover/FC_NL34.png" align="middle" width="100">Naguib Labib CD #34</a>
+<a><img src="album_cover/FC_NL34.png" align="middle" width="100">Naguib Labib CD #34</a>
 </td>
 <td align="center">
 <a href="zip/NL34.zip"><img src="../images/download.jpg"></a>
@@ -167,7 +167,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL36"><img src="album_cover/FC_NL36.png" align="middle" width="100">Naguib Labib CD #36</a>
+<a><img src="album_cover/FC_NL36.png" align="middle" width="100">Naguib Labib CD #36</a>
 </td>
 <td align="center">
 <a href="zip/NL36.zip"><img src="../images/download.jpg"></a>
@@ -175,7 +175,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL37"><img src="album_cover/FC_NL37.png" align="middle" width="100">Naguib Labib CD #37</a>
+<a><img src="album_cover/FC_NL37.png" align="middle" width="100">Naguib Labib CD #37</a>
 </td>
 <td align="center">
 <a href="zip/NL37.zip"><img src="../images/download.jpg"></a>
@@ -183,7 +183,7 @@ body, td
 </tr>
 <tr>
 <td align="center">
-<a href="songs.php?album_id=NL38"><img src="album_cover/FC_NL38.png" align="middle" width="100">Naguib Labib CD #38</a>
+<a><img src="album_cover/FC_NL38.png" align="middle" width="100">Naguib Labib CD #38</a>
 </td>
 <td align="center">
 <a href="zip/NL38.zip"><img src="../images/download.jpg"></a>
