--- a/sermons/sermons.html
+++ b/sermons/sermons.html
@@ -5,7 +5,7 @@
 <title>Online Sermons</title>
 <script language="JavaScript" src="audio-player.js"></script>
 <link rel='stylesheet' id='risen-base-style-css'  href='style.css' type='text/css' media='all' />
-<link rel='stylesheet' id='google-fonts-css'  href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Shadows+Into+Light+Two' type='text/css' media='all' />
+<link rel='stylesheet' id='google-fonts-css'  href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Shadows+Into+Light+Two' type='text/css' media='all' />
 
 
 </head>
