--- a/sermons.html
+++ b/sermons.html
@@ -39,7 +39,7 @@
 							<li class="menu-item"><a href="#">About</br>من نحن</a></li>
 							<li class="menu-item current-menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
 							<li class="menu-item"><a href="events.html">Events</br>أحداث</a></li>
-							<li class="menu-item"><a href="#">Gallery</br>صور</a></li>
+							<li class="menu-item"><a href="media.html">Media</br>ترانيم</a></li>
 							<li class="menu-item"><a href="#">Contact</br>اتصل بنا</a></li>
 						</ul>
 					</div>
