--- a/events.html
+++ b/events.html
@@ -26,7 +26,7 @@
 		<div class="site-content">
 			<header class="site-header">
 				<div class="container">
-					<a href="#" class="branding">
+					<a href="index.html" class="branding">
 						<img src="images/logo.png" alt="" class="logo">
 						<h1 class="site-title">Fellowship Bible Church</h1>
 					</a>
@@ -38,7 +38,7 @@
 							<li class="menu-item"><a href="#">About</br>من نحن</a></li>
 							<li class="menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
 							<li class="menu-item current-menu-item"><a href="events.html">Events</br>أحداث</a></li>
-							<li class="menu-item"><a href="#">Gallery</br>صور</a></li>
+							<li class="menu-item"><a href="media.html">Media</br>ترانيم</a></li>
 							<li class="menu-item"><a href="#">Contact</br>اتصل بنا</a></li>
 						</ul>
 					</div>
