--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="assets/css/main.css">
-		
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script type="text/javascript" src="assets/TimeCircles/TimeCircles.js"></script>
+        <link rel="stylesheet" href="assets/TimeCircles/TimeCircles.css" />
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
 		<script src="js/ie-support/respond.js"></script>
@@ -105,115 +107,17 @@
 				<div class="fullwidth-block">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-6">
-								<h2 class="section-title">Upcoming events</h2>
-								<ul class="event-list">
-									<li>
-										<a href="#">
-											<h3 class="event-title">africa mission trip</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-												<span><i class="fa fa-map-marker"></i> Africa</span>
 
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3 class="event-title">Bible school</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-												<span><i class="fa fa-map-marker"></i> Saint paul church</span>
+					<center><h2 class="section-title">Upcoming Event</h2></center>
+					<hr>
+					</br>
+					<center><h3>Join us for a Worship Night.</h3></center>
+					<center><h4>Thursday 31 August 2017 at 8:00 PM in Ain Dara.</h4></center>
+								<div id="DateCountdown" data-date="2017-08-31 16:00:00" style="width: 100%;"></div>
 
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3 class="event-title">praying for kids</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-												<span><i class="fa fa-map-marker"></i> true church</span>
-
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3 class="event-title">love giving</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-												<span><i class="fa fa-map-marker"></i> St cathedral</span>
-
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3 class="event-title">god ont the vacation</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-												<span><i class="fa fa-map-marker"></i> greenie lake</span>
-
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3 class="event-title">homeless helping</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-												<span><i class="fa fa-map-marker"></i> Detroit city</span>
-
-											</span>
-										</a>
-									</li>
-								</ul>
-
-								<div class="text-center">
-									<a href="#" class="button">See all events</a>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<h2 class="section-title">Latest sermons</h2>
-								<ul class="seremon-list">
-									<li>
-										<div class="seremon-detail">
-											<h3 class="seremon-title"><a href="#">I believe in god with all my heart</a></h3>
-											<div class="seremon-meta">
-												<div class="pastor"><i class="fa fa-user"></i> Alan Ray</div>
-												<div class="date"><i class="fa fa-calendar"></i> 18 mar 2014</div>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="seremon-detail">
-											<h3 class="seremon-title"><a href="#">Trusting in jesus and god</a></h3>
-											<div class="seremon-meta">
-												<div class="pastor"><i class="fa fa-user"></i> David Clark</div>
-												<div class="date"><i class="fa fa-calendar"></i> 18 mar 2014</div>
-											</div>
-										</div>
-									</li>
-									<li>
-										<div class="seremon-detail">
-											<h3 class="seremon-title"><a href="#">Love your kids</a></h3>
-											<div class="seremon-meta">
-												<div class="pastor"><i class="fa fa-user"></i> anthony roberts</div>
-												<div class="date"><i class="fa fa-calendar"></i> 18 mar 2014</div>
-											</div>
-										</div>
-									</li>
-								</ul>
-
-								<div class="text-center">
-									<a href="#" class="button">See all sermons</a>
-								</div>
 							</div>
 						</div> <!-- .row -->
 					</div> <!-- .container -->
-				</div> <!-- section -->
-			</main> <!-- .main-content -->
 
 			<footer class="site-footer">
 				<div class="container">
@@ -223,7 +127,7 @@
 								<h3 class="widget-title">Our address</h3>
 								<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut.</br>Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع </p>
 								<ul class="address">
-									<li><i class="fa fa-map-marker"></i> 329 Church St, Garland, TX 75042</li>
+									<li><i class="fa fa-map-marker"></i>Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
 									<li><i class="fa fa-phone"></i> (425) 853 442 552</li>
 									<li><i class="fa fa-envelope"></i> info@yourchurch.com</li>
 								</ul>
@@ -234,9 +138,9 @@
 								<h3 class="widget-title">Services & Ministries</h3>
 								<p>The FBC operates a series of scheduled meetings during the week, including a Sunday school. </br></br>The timetable for gatherings and worship is according to the following chart (Beirut Local Time):</p>
 								<ul class="bullet">
-									<li><a>Worship Service: Sundays at 10:30 AM</a></li>
-									<li><a>Bible Study & Prayer: Thursdays at 6:30 PM</a></li>
-									<li><a>Sunday School: For all ages at 9:30 AM</a></li> 
+									<li>Worship Service: Sundays at 10:30 AM</li>
+									<li>Bible Study & Prayer: Thursdays at 6:30 PM</li>
+									<li>Sunday School: For all ages at 9:30 AM</li> 
 								</ul>
 							</div>
 						</div>
@@ -293,7 +197,36 @@
 
 		</div>
 		
-
+		<script>
+		$("#DateCountdown").TimeCircles({
+		    "animation": "smooth",
+		    "bg_width": 1,
+		    "fg_width": 0.04,
+		    "circle_bg_color": "#EEEEEE",
+		    "time": {
+		        "Days": {
+		            "text": "Days",
+		            "color": "#CCCCCC",
+		            "show": true
+		        },
+		        "Hours": {
+		            "text": "Hours",
+		            "color": "#CCCCCC",
+		            "show": true
+		        },
+		        "Minutes": {
+		            "text": "Minutes",
+		            "color": "#CCCCCC",
+		            "show": true
+		        },
+		        "Seconds": {
+		            "text": "Seconds",
+		            "color": "#CCCCCC",
+		            "show": true
+		        }
+		    }
+		});
+		</script>
 		<script src="assets/js/jquery-1.11.1.min.js"></script>
 		<script src="assets/js/plugins.js"></script>
 		<script src="assets/js/app.js"></script>
