--- a/sermons.html
+++ b/sermons.html
@@ -36,7 +36,7 @@
 						<button class="menu-toggle"><i class="fa fa-bars"></i>Menu</button>
 						<ul class="menu">
 							<li class="menu-item"><a href="index.html">Homepage</br>الرئيسية</a></li>
-							<li class="menu-item"><a href="#">About</br>من نحن</a></li>
+							<li class="menu-item"><a href="about.html">About</br>من نحن</a></li>
 							<li class="menu-item current-menu-item"><a href="sermons.html">Sermons</br>العظات</a></li>
 							<li class="menu-item"><a href="events.html">Events</br>أحداث</a></li>
 							<li class="menu-item"><a href="media.html">Media</br>ترانيم</a></li>
