--- a/media.html
+++ b/media.html
@@ -191,9 +191,9 @@
 						<div class="col-md-4">
 							<div class="widget">
 								<h3 class="widget-title">Our address</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi perspiciatis magnam, ab ipsa laboriosam tempore tenetur, aliquid repellat, ex cum dicta reiciendis accusamus. Omnis repudiandae quasi mollitia, iusto odio dignissimos.</p>
+								<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut.</br>Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع </p>
 								<ul class="address">
-									<li><i class="fa fa-map-marker"></i> 329 Church St, Garland, TX 75042</li>
+									<li><i class="fa fa-map-marker"></i>Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
 									<li><i class="fa fa-phone"></i> (425) 853 442 552</li>
 									<li><i class="fa fa-envelope"></i> info@yourchurch.com</li>
 								</ul>
@@ -201,37 +201,66 @@
 						</div>
 						<div class="col-md-4">
 							<div class="widget">
-								<h3 class="widget-title">Topics from last meeting</h3>
+								<h3 class="widget-title">Services & Ministries</h3>
+								<p>The FBC operates a series of scheduled meetings during the week, including a Sunday school. </br></br>The timetable for gatherings and worship is according to the following chart (Beirut Local Time):</p>
 								<ul class="bullet">
-									<li><a href="#">Lorem ipsum dolor sit amet</a></li>
-									<li><a href="#">Consectetur adipisicing elit quis nostrud</a></li>
-									<li><a href="#">Eiusmod tempor incididunt ut labore et dolore magna</a></li> 
-									<li><a href="#">Ut enim ad minim veniam cillum</a></li>
-									<li><a href="#">Exercitation ullamco laboris nisi ut aliquip</a></li> 
-									<li><a href="#">Duis aute irure dolor in reprehenderit in voluptate</a></li>
+									<li>Worship Service: Sundays at 10:30 AM</li>
+									<li>Bible Study & Prayer: Thursdays at 6:30 PM</li>
+									<li>Sunday School: For all ages at 9:30 AM</li> 
 								</ul>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="widget">
 								<h3 class="widget-title">Contact form</h3>
-								<form action="#" class="contact-form">
+
+								<form id="contact_form" role="form" action="https://formspree.io/peterhaddad98@gmail.com" class="contact-form" method="post">
+									<input type="hidden" name="_next" value="https://peterhaddad98.github.io/peter/contact/success.html">
+					  				<input type="text" name="_format" value="plain" style="display:none">
 									<div class="row">
-										<div class="col-md-6"><input type="text" placeholder="Your name..."></div>
-										<div class="col-md-6"><input type="text" placeholder="Email..."></div>
+										<div class="col-md-6">
+											<label for="name" class="required"></label>
+											<input type="text" class="form-control" id="name" name="name" required="required" placeholder="Your name...">
+										</div>
+										<div class="col-md-6">
+											<label for="email" class="required"></label>
+											<input type="email" class="form-control" id="email" name="email" required="required" placeholder="Email...">
+										</div>
 									</div>
-									
-									<textarea name="" placeholder="Your message..."></textarea>
-									<div class="text-right"><input type="submit" value="Send message"></div>
+									<label for="message" class="required"></label>
+									<textarea id="message" name="message" required="required" placeholder="Your message..."></textarea>
+										<div class="col-md-6" style="height: 0; overflow: hidden;">
+											<label for="antispam">Please leave this field blank (if it's not blank your message will be marked as spam!):</label>
+											<input type="text" class="form-control" id="antispam" name="_gotcha">
+										</div>
+									<div class="text-right"><button type="submit" id="submit" class="btn btn-default" disabled="disabled">Send Message</button></div>
 									
 								</form>
+
+							<script>
+							    var submitButton = document.getElementById("submit");
+							    document.addEventListener("DOMContentLoaded", function() {
+							        $(submit).prop("disabled", false);
+							        $("#contact_form").submit(function() {
+							            $(submit).prop("disabled", true);
+							            $(submit).text("Sending...");
+							        });
+							    });
+							    window.addEventListener("pageshow", function() {
+							        submit.disabled = false;
+							        submit.textContent = "Send Message";
+							    });
+							</script>
+
+
 							</div>
 						</div>
 					</div> <!-- .row -->
 
-					<p class="colophon">Copyright 2014 True Church. All right reserved</p>
+					<p class="colophon">© 2017 Fellowship Bible Church. All right reserved</p>
 				</div><!-- .container -->
 			</footer> <!-- .site-footer -->
+
 
 		</div>
 		
