--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Fellowship Bible Church</title>
+		<title>Fellowship Baptist Church</title>
 
 		<!-- Loading third party fonts -->
 		<link href="assets/fonts/novecento-font/novecento-font.css" rel="stylesheet" type="text/css">
@@ -27,8 +27,8 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" class="branding">
-						<img src="images/logo.png" alt="" class="logo">
-						<h1 class="site-title">Fellowship Bible Church</h1>
+						<img src="images/logo.jpg" alt="" class="logo" width="85" height="85">
+						<h1 class="site-title">Fellowship Baptist Church</h1>
 					</a>
 
 					<div class="main-navigation">
@@ -61,7 +61,7 @@
 							<div class="content col-md-8">
 
 								<div style="text-align: center;">
-							       <img src="images/slide-1.JPG" style="max-width: 100%; height: auto;" alt="Church" />
+							       <img src="images/about.JPG" style="max-width: 100%; height: auto;" alt="Church" />
 							    </div>
 
 								</br>
