--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Fellowship Bible Church</title>
+		<title>Fellowship Baptist Church</title>
 
 		<!-- Loading third party fonts -->
 		<link href="assets/fonts/novecento-font/novecento-font.css" rel="stylesheet" type="text/css">
@@ -23,14 +23,14 @@
 	</head>
 
 
-	<body style="padding:0px; margin:0px; background-color:#fff;font-family:'Open Sans',sans-serif,arial,helvetica,verdana">
+	<body>
 
 		<div class="site-content">
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" class="branding">
-						<img src="images/logo.png" alt="" class="logo">
-						<h1 class="site-title">Fellowship Bible Church</h1>
+						<img src="images/logo.jpg" alt="" class="logo" width="85" height="85">
+						<h1 class="site-title">Fellowship Baptist Church</h1>
 					</a>
 
 					<div class="main-navigation">
@@ -57,7 +57,6 @@
 				</br></br></br></br>
 			</section>
 
-
     <div class="div2">
        
     </div>
@@ -65,59 +64,63 @@
 			<main class="main-content">
 				<div class="fullwidth-block">
 					<div class="container">
-					<center><h2 class="section-title">نرحب بكم إلى كنيسة التعاون المعمدانية</br></br>
+					<center><h2 class="section-title" style="direction: rtl;">نرحب بكم إلى كنيسة التعاون المعمدانية</br></br>
 					We welcome you to the Fellowship Bible Church</h2></center>
 					<hr>
 					</br>
-						<h2 class="section-title">Recent news</h2>
 
 						<div class="row">
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<image class="news-image" src="images/news-thumb-1.jpg"></image>
-									<h3 class="news-title"><a href="#">laboris nisi ut aliquip</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>24 mar 2014</small>
+									<img class="news-image" src="images/news-thumb-1.jpg"></img>
+									<h3 class="news-title"><a href="#">Contact us for more information</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>24 oct 2017</small>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<image class="news-image" src="images/news-thumb-2.jpg"></image>
-									<h3 class="news-title"><a href="#">laboris nisi ut aliquip</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>24 mar 2014</small>
+									<a href="bible.html"><img class="news-image" src="images/news-thumb-2.jpg"></img></a>
+									<h3 class="news-title"><a href="#">Read the Bible</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>26 sep 2014</small>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<image class="news-image" src="images/news-thumb-3.jpg"></image>
-									<h3 class="news-title"><a href="#">laboris nisi ut aliquip</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>24 mar 2014</small>
+									<a href="schedule.html"><img class="news-image" src="images/news-thumb-3.jpg"></img></a>
+									<h3 class="news-title"><a href="#">The timetable for gatherings</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>05 oct 2017</small>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<image class="news-image" src="images/news-thumb-4.jpg"></image>
-									<h3 class="news-title"><a href="#">laboris nisi ut aliquip</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>24 mar 2014</small>
+									<img class="news-image" src="images/news-thumb-4.jpg"></img>
+									<h3 class="news-title"><a href="#">Only God can satisfy our souls</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>24 dec 2017</small>
 								</div>
 							</div>
 						</div> <!-- .row -->
 					</div> <!-- .container -->
 				</div> <!-- section -->
-
 				<div class="fullwidth-block">
 					<div class="container">
 						<div class="row">
 
-					<center><h2 class="section-title">Upcoming Event</h2></center>
-					<hr>
-					</br>
-					<center><h3>Join us for a Worship Night.</h3></center>
-					<center><h4>Thursday 31 August 2017 at 8:00 PM in Ain Dara.</h4></center>
-								<div id="DateCountdown" data-date="2017-08-31 16:00:00" style="width: 100%;"></div>
+								</br>
+								<center><h2 class="section-title">Upcoming Sermon</h2></center>
+								<hr>
+								</br>
+								<center><h3>Join us for a Worship Service.</h3></center>
+								<center><h4>Sunday 10:30 AM at the Fellowship Baptist Church.</h4></center>
+								<div id="DateCountdown" data-date="2017-09-11 10:30:00" style="width: 100%;"></div>
 
-							</div>
+
 						</div> <!-- .row -->
 					</div> <!-- .container -->
+				</div> <!-- section -->
+
+
+
+				</main>
 
 			<footer class="site-footer">
 				<div class="container">
@@ -127,9 +130,9 @@
 								<h3 class="widget-title">Our address</h3>
 								<p>The Church cordially and gladly invites you to come and enjoy a vintage style of modern worship in a casual and friendly atmosphere.</br></br>We can be located at the Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif, Bldg. 78, Beirut.</br>Genuine welcome extended to everyone. أهلاً وسهلاً بالجميع </p>
 								<ul class="address">
-									<li><i class="fa fa-map-marker"></i>Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
+									<li><i class="fa fa-map-marker"></i> Farabi St., Rue Salim Al-Boustani, Watwat, El-Zarif</li>
 									<li><i class="fa fa-phone"></i> (425) 853 442 552</li>
-									<li><i class="fa fa-envelope"></i> info@yourchurch.com</li>
+									<li><a href="mailto:fbcbaptistchurch@gmail.com"><i class="fa fa-envelope"></i><c class ="color"> fbcbaptistchurch@gmail.com</c></a></li>
 								</ul>
 							</div>
 						</div>
@@ -168,7 +171,6 @@
 											<input type="text" class="form-control" id="antispam" name="_gotcha">
 										</div>
 									<div class="text-right"><button type="submit" id="submit" class="btn btn-default" disabled="disabled">Send Message</button></div>
-									
 								</form>
 
 							<script>
@@ -191,7 +193,7 @@
 						</div>
 					</div> <!-- .row -->
 
-					<p class="colophon">© 2017 Fellowship Bible Church. All right reserved</p>
+					<p class="colophon">© 2017 Fellowship Baptist Church. All rights reserved</p>
 				</div><!-- .container -->
 			</footer> <!-- .site-footer -->
 
