--- a/media/media.html
+++ b/media/media.html
@@ -18,7 +18,7 @@ body, td
 <a><img src="album_cover/FC_NL04.png" align="middle" width="100">Naguib Labib CD #04</a>
 </td>
 <td align="center">
-<a href="zip/NL04.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL04.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -26,7 +26,7 @@ body, td
 <a><img src="album_cover/FC_NL05.png" align="middle" width="100">Naguib Labib CD #05</a>
 </td>
 <td align="center">
-<a href="zip/NL05.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL05.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -34,7 +34,7 @@ body, td
 <a><img src="album_cover/FC_NL07.png" align="middle" width="100">Naguib Labib CD #07</a>
 </td>
 <td align="center">
-<a href="zip/NL07.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL07.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -42,7 +42,7 @@ body, td
 <a><img src="album_cover/FC_NL09.png" align="middle" width="100">Naguib Labib CD #09</a>
 </td>
 <td align="center">
-<a href="zip/NL09.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL09.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -50,7 +50,7 @@ body, td
 <a><img src="album_cover/FC_NL10.png" align="middle" width="100">Naguib Labib CD #10</a>
 </td>
 <td align="center">
-<a href="zip/NL10.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL10.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -58,7 +58,7 @@ body, td
 <a><img src="album_cover/FC_NL12.png" align="middle" width="100">Naguib Labib CD #12</a>
 </td>
 <td align="center">
-<a href="zip/NL12.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL12.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -66,7 +66,7 @@ body, td
 <a><img src="album_cover/FC_NL15.png" align="middle" width="100">Naguib Labib CD #15</a>
 </td>
 <td align="center">
-<a href="zip/NL15.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL15.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -74,7 +74,7 @@ body, td
 <a><img src="album_cover/FC_NL16.png" align="middle" width="100">Naguib Labib CD #16</a>
 </td>
 <td align="center">
-<a href="zip/NL16.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL16.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -82,7 +82,7 @@ body, td
 <a><img src="album_cover/FC_NL17.png" align="middle" width="100">Naguib Labib CD #17</a>
 </td>
 <td align="center">
-<a href="zip/NL17.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL17.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -90,7 +90,7 @@ body, td
 <a><img src="album_cover/FC_NL24.png" align="middle" width="100">Naguib Labib CD #24</a>
 </td>
 <td align="center">
-<a href="zip/NL24.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL24.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -98,7 +98,7 @@ body, td
 <a><img src="album_cover/FC_NL25.png" align="middle" width="100">Naguib Labib CD #25</a>
 </td>
 <td align="center">
-<a href="zip/NL25.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL25.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -106,7 +106,7 @@ body, td
 <a><img src="album_cover/FC_NL26.png" align="middle" width="100">Naguib Labib CD #26</a>
 </td>
 <td align="center">
-<a href="zip/NL26.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL26.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -114,7 +114,7 @@ body, td
 <a><img src="album_cover/FC_NL27.png" align="middle" width="100">Naguib Labib CD #27</a>
 </td>
 <td align="center">
-<a href="zip/NL27.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL27.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -122,7 +122,7 @@ body, td
 <a><img src="album_cover/FC_NL29.png" align="middle" width="100">Naguib Labib CD #29</a>
 </td>
 <td align="center">
-<a href="zip/NL29.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL29.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -130,7 +130,7 @@ body, td
 <a><img src="album_cover/FC_NL30.png" align="middle" width="100">Naguib Labib CD #30</a>
 </td>
 <td align="center">
-<a href="zip/NL30.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL30.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -138,7 +138,7 @@ body, td
 <a><img src="album_cover/FC_NL31.png" align="middle" width="100">Naguib Labib CD #31</a>
 </td>
 <td align="center">
-<a href="zip/NL31.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL31.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -146,7 +146,7 @@ body, td
 <a><img src="album_cover/FC_NL32.png" align="middle" width="100">Naguib Labib CD #32</a>
 </td>
 <td align="center">
-<a href="zip/NL32.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL32.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -154,7 +154,7 @@ body, td
 <a><img src="album_cover/FC_NL33.png" align="middle" width="100">Naguib Labib CD #33</a>
 </td>
 <td align="center">
-<a href="zip/NL33.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL33.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -162,7 +162,7 @@ body, td
 <a><img src="album_cover/FC_NL34.png" align="middle" width="100">Naguib Labib CD #34</a>
 </td>
 <td align="center">
-<a href="zip/NL34.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL34.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -170,7 +170,7 @@ body, td
 <a><img src="album_cover/FC_NL36.png" align="middle" width="100">Naguib Labib CD #36</a>
 </td>
 <td align="center">
-<a href="zip/NL36.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL36.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -178,7 +178,7 @@ body, td
 <a><img src="album_cover/FC_NL37.png" align="middle" width="100">Naguib Labib CD #37</a>
 </td>
 <td align="center">
-<a href="zip/NL37.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL37.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 <tr>
@@ -186,7 +186,7 @@ body, td
 <a><img src="album_cover/FC_NL38.png" align="middle" width="100">Naguib Labib CD #38</a>
 </td>
 <td align="center">
-<a href="zip/NL38.zip"><img src="../images/download.jpg"></a>
+<a href="zip/naguib/NL38.zip"><img src="../images/download.jpg"></a>
 </td>
 </tr>
 </table>
