--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Fellowship Bible Church</title>
+		<title>Fellowship Baptist Church</title>
 
 		<!-- Loading third party fonts -->
 		<link href="assets/fonts/novecento-font/novecento-font.css" rel="stylesheet" type="text/css">
@@ -27,8 +27,8 @@
 			<header class="site-header">
 				<div class="container">
 					<a href="index.html" class="branding">
-						<img src="images/logo.png" alt="" class="logo">
-						<h1 class="site-title">Fellowship Bible Church</h1>
+						<img src="images/logo.jpg" alt="" class="logo" width="85" height="85">
+						<h1 class="site-title">Fellowship Baptist Church</h1>
 					</a>
 
 					<div class="main-navigation">
@@ -90,36 +90,6 @@
 										<a href="#" class="button">Join to this event</a>
 										<a href="#" class="button secondary">Ask a question</a>
 									</li>
-									<li>
-										<h3 class="event-title"><a href="#">love giving</a></h3>
-										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-											<span><i class="fa fa-map-marker"></i> St cathedral</span>
-										</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum, minus error ipsum optio praesentium exercitationem necessitatibus accusamus reiciendis veritatis iste, aliquam nulla neque magni debitis deleniti harum molestias. Suscipit.</p>
-										<a href="#" class="button">Join to this event</a>
-										<a href="#" class="button secondary">Ask a question</a>
-									</li>
-									<li>
-										<h3 class="event-title"><a href="#">god ont the vacation</a></h3>
-										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-											<span><i class="fa fa-map-marker"></i> greenie lake</span>
-										</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae error officia, vero quo ducimus maiores, itaque consequatur vitae tempore nulla beatae quis. Asperiores perspiciatis facere harum ducimus doloribus. Neque, accusamus?</p>
-										<a href="#" class="button">Join to this event</a>
-										<a href="#" class="button secondary">Ask a question</a>
-									</li>
-									<li>
-										<h3 class="event-title"><a href="#">homeless helping</a></h3>
-										<span class="event-meta">
-											<span><i class="fa fa-calendar"></i>30 mar 2014</span>
-											<span><i class="fa fa-map-marker"></i> Detroit city</span>
-										</span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, minus perspiciatis. Ad vero maxime iusto nemo, id optio iure officiis quisquam incidunt, ipsum suscipit! Unde facilis nisi totam. Reiciendis, accusamus.</p>
-										<a href="#" class="button">Join to this event</a>
-										<a href="#" class="button secondary">Ask a question</a>
-									</li>
 								</ul>
 							</div>
 							<div class="sidebar col-md-3 col-md-offset-1">
@@ -138,19 +108,6 @@
 									<h3 class="widget-title">Donations</h3>
 									<p>Distinctio unde consequuntur delectus, repudiandae, impedit atque earum adipisci, explicabo perferendis.</p>
 									<a href="#" class="button">Make a donation</a>
-								</div>
-
-								<div class="widget">
-									<h3 class="widget-title">Gallery updates</h3>
-
-									<div class="galery-thumb">
-										<a href="#"><img src="images/gallery-thumb-1.jpg" alt=""></a>
-										<a href="#"><img src="images/gallery-thumb-2.jpg" alt=""></a>
-										<a href="#"><img src="images/gallery-thumb-3.jpg" alt=""></a>
-										<a href="#"><img src="images/gallery-thumb-4.jpg" alt=""></a>
-										<a href="#"><img src="images/gallery-thumb-5.jpg" alt=""></a>
-										<a href="#"><img src="images/gallery-thumb-6.jpg" alt=""></a>
-									</div>
 								</div>
 
 								<div class="widget">
