--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<img class="news-image" src="images/news-thumb-1.jpg"></img>
-									<h3 class="news-title"><a href="#">Contact us for more information</a></h3>
+									<h3 class="news-title"><a href="#">Contact us</a></h3>
 									<small class="date"><i class="fa fa-calendar"></i>24 oct 2017</small>
 								</div>
 							</div>
