--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 							<div class="content col-md-8">
 
 								<div style="text-align: center;">
-							       <img src="images/about.JPG" style="max-width: 100%; height: auto;" alt="Church" />
+							       <img src="images/about.jpg" style="max-width: 100%; height: auto;" alt="Church" />
 							    </div>
 
 								</br>
