--- a/index.html
+++ b/index.html
@@ -72,35 +72,27 @@
 						<div class="row">
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<img class="news-image" src="images/news-thumb-1.jpg"></img>
-									<h3 class="news-title"><a href="#">Contact us</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>24 oct 2017</small>
+									<p><a href="bible.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-1.jpg"></img></a></p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<a href="bible.html"><img class="news-image" src="images/news-thumb-2.jpg"></img></a>
-									<h3 class="news-title"><a href="#">Read the Bible</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>26 sep 2014</small>
+									<p><a href="bible.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-2.jpg"></img></a></p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<a href="schedule.html"><img class="news-image" src="images/news-thumb-3.jpg"></img></a>
-									<h3 class="news-title"><a href="#">The timetable for gatherings</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>05 oct 2017</small>
+									<p><a href="schedule.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-3.jpg"></img></a></p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
-									<img class="news-image" src="images/news-thumb-4.jpg"></img>
-									<h3 class="news-title"><a href="#">Only God can satisfy our souls</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>24 dec 2017</small>
+									<p><a href="bible.html"><img style = "border: 1px solid #ddd; border-radius: 4px; padding: 5px; width: 100%; transition: .5s ease; backface-visibility: hidden;" class="news-image" src="images/news-thumb-4.jpg"></img></a></p>
 								</div>
 							</div>
 						</div> <!-- .row -->
 					</div> <!-- .container -->
-				</div> <!-- section -->
+
 				<div class="fullwidth-block">
 					<div class="container">
 						<div class="row">
@@ -114,13 +106,11 @@
 								<div id="DateCountdown" data-date="2017-09-11 10:30:00" style="width: 100%;"></div>
 
 
-						</div> <!-- .row -->
-					</div> <!-- .container -->
-				</div> <!-- section -->
-
-
-
-				</main>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
 
 			<footer class="site-footer">
 				<div class="container">
